--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "bootstrap": "^5.3.2",
     "dayjs": "^1.11.9",
     "eslint": "8.44.0",
     "eslint-config-next": "^12.0.4",
